--- a/projeto-faculdade5.0/css/index.css
+++ b/projeto-faculdade5.0/css/index.css
@@ -10,7 +10,9 @@ body {
   background: rgb(223, 226, 227);
   font-size: 11px;
 }
-
+.container-fluid {
+  padding-right: 36px;
+}
 
 a {
   cursor: pointer;
@@ -512,16 +514,7 @@ input:valid {
 
 
 
-.quadro a {
-  display: block; 
-  text-align: center;
-  margin-top: 10px; 
-}
-.quadro {
-  display: flex;
-  align-items: center;
-  height: 450px;
-}
+
 
 .quadro .text-center {
   display: flex;
@@ -583,3 +576,46 @@ th{
 .table th, .table td {
   border: 1px solid #ccc;
 }
+
+/* Tela Principal */
+
+
+
+.containerPrincipal {
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.solucaoQuadro {
+  text-align: center;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  height: 300px;
+}
+
+.solucaoImagem {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.solucaoDescricao {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
