--- a/redeSocial/css/index.css
+++ b/redeSocial/css/index.css
@@ -37,8 +37,21 @@ body>div>header>nav {
     border-radius: 50%;
     padding: 4px 8px;
     font-size: 10px;
+    position: absolute;
 }
-
+#fotoPerfil{
+    max-width: 50px;
+    max-height: 50px;
+    border-radius: 50%;
+}
+.navbar-nav{
+    gap: 10%;
+    margin: auto;
+    display: flex;
+}
+.navbar-nav li {
+    font-size: x-large;
+}
 
 /* Conteúdo */
 .publicacoes {
