--- a/projeto-netflix/src/assets/css/style.css
+++ b/projeto-netflix/src/assets/css/style.css
@@ -34,7 +34,7 @@ h1 {
 .cabecalho {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content:space-around;
     position: absolute;
     top: 0;
     left: 0;
@@ -44,7 +44,6 @@ h1 {
 
 .cabecalho_menu {
     display: flex;
-
 }
 
 li {
@@ -140,7 +139,7 @@ form {
     padding: 1.5rem 1rem 0.5rem;
     padding: 16px;
     min-width: 16px;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.69);
     width: 100%;
     border: none;
     outline: 1px solid #ffffff;
@@ -190,12 +189,11 @@ form {
     background: radial-gradient(51.39% 511.66% at 47.68% -217.91%, #ff9900 0%, #e50914 17.27%, #0e1b4f 79.44%, #000413 100%);
     box-shadow: 0px -8px 25px rgba(0, 0, 0, 0.5);
     border-radius: 4px;
-    margin: 0 74px;
     color: white;
     padding: 22px;
-    margin-top: -7%;
-    position: absolute;
-    width: 90%;
+    position: relative;
+    width: 90vw;
+    margin: -8% auto;
 
 }
 
@@ -253,4 +251,7 @@ form {
     flex-direction: column;
     align-items: center;    
     padding: 0 20%;
+}
+.perguntas_frequentes_escrito li {
+    display: none;
 }
