--- a/redeSocial/src/css/style_index.css
+++ b/redeSocial/src/css/style_index.css
@@ -5,6 +5,15 @@
   text-decoration: none;
 }
 
+:root {
+  --cor-navbar: #FFFFFF;
+  --cor-tela-fundo: #F4F2EE;
+  --cor-div-cadastro: #181920;
+  --cor-input-form: #252A34;
+  --cor-placeholder: #CBD0F7;
+  --cor-botao-submit: #5568fe;
+}
+
 html,
 body {
   overflow: hidden;
@@ -12,46 +21,140 @@ body {
   max-width: 100vw;
 
 }
+
 li {
   list-style: none;
 }
+
 body {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 15vh 65vh 20vh;
+  background-color: var(--cor-tela-fundo);
+  grid-template-columns: 100px 1fr 100px;
+  grid-template-rows: 15vh 70vh 15vh;
   grid-template-areas:
-    "cabecalho"
-    "conteudo"
-    "rodape";
+    "cabecalho cabecalho cabecalho"
+    "conteudo conteudo counteudo"
+    "rodape rodape rodape";
 
+}
+
+.logo {
+  display: flex;
+  max-width: 100px;
+  align-items: center;
+}
+
+.logo img {
+  border-radius: 8px;
+  height: 100%;
 
 }
 
 .cabecalho {
-  background-color: aquamarine;
-  grid-area: cabecalho;
   display: grid;
+  background-color: var(--cor-navbar);
+  grid-area: cabecalho;
   align-items: center;
   padding: 0px 1rem;
+  box-shadow: 0px 0px 8px 0px black;
+
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
-  gap: 10rem;
+  align-items: center;
+  gap: 1rem;
+}
+
+.nav-menu {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+}
+.nav-link {
+  transition: 0.5s ease;
+  color: black;
+}
+.nav-link:hover {
+  color: #0088d2;
+}
+
+.hamburguer {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  width: 28px;
+  height: 3px;
+  border-radius: 2px;
+  margin: 5px auto;
+  background-color: #020202;
+  transition: all 0.3s ease-in-out;
+}
+
+.pesquisa-div {
+  display: flex;
+}
+
+.pesquisa-input {
+  height: 50px;
+  background-color: var(--cor-placeholder);
+  border: unset;
+  border-radius: 8px;
+  padding: 10px;
 }
 
 
-
 main {
-  background-color: #e4e4ea;
   grid-area: conteudo;
   padding: 1rem 1rem;
   text-align: center;
 }
 
+
 footer {
   background-color: rgba(0, 0, 0, 0.374);
   grid-area: rodape;
 
+}
+
+
+@media(max-width:768px) {
+  .hamburguer {
+    display: block;
+  }
+  .hamburguer.active .bar:nth-child(2){
+    opacity: 0;
+  }
+  .hamburguer.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburguer.active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  .nav-menu{
+    position:fixed;
+    left: -100%;
+    top: 111px;
+    gap: 0;
+    border-radius: 0 0 20px 20px;
+    background-color: black;
+    text-align: center;
+    flex-direction: column;
+    width: 100%;
+    transition: 0.3s;
+  }
+  .nav-link {
+    color: white;
+  }
+  .nav-item {
+    margin: 16px 0;
+  }
+  .nav-menu.active {
+    left: 0;
+    top: 85px;
+  }
 }
