--- a/calculadoraIMC/IMC.css
+++ b/calculadoraIMC/IMC.css
@@ -1,3 +1,14 @@
+@media(max-width:768px){
+    .container {
+        display: block;
+    }
+    form {
+        margin: none;
+    }
+    #telapreta {
+        width: auto;
+    }
+}
 *{
     margin: 0;
     padding: 0
